knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>