knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use when assigning Lead to an Existing Company</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (field_account)</relationshipLabel>
    <relationshipName>Leads8</relationshipName>
    <type>Lookup</type>
</CustomField>