knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Account_LD__c.field-meta.xml
<CustomField>
    <fullName>Account_LD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field for Lead Discovery</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Account)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>