knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Bid_Process__c.field-meta.xml
<CustomField>
    <fullName>Bid_Process__c</fullName>
    <label>RFP Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole-Sourced</fullName>
            </value>
            <value>
                <fullName>Open Bid + BAFO</fullName>
            </value>
            <value>
                <fullName>Open Bid + Negot Terms</fullName>
            </value>
            <value>
                <fullName>By Invitation + BAFO</fullName>
            </value>
            <value>
                <fullName>By Invitation + Negot Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>