knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Chk_Converted__c.field-meta.xml
<CustomField>
    <fullName>Chk_Converted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field will be mapped to Opportunities when LD record is converted and then a workflow rule on Opportunities will update CreatedDate field to the day LD record is converted if Converted field is checked on Opportunities. Do not delete.</description>
    <label>Chk_Converted</label>
    <type>Checkbox</type>
</CustomField>