knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Chk_Converted_Acc__c.field-meta.xml
<CustomField>
    <fullName>Chk_Converted_Acc__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field will be mapped to Accounts when LD record is converted and then a workflow rule on Account will set Owner Name to Jamie Hidalgo.  Do not delete.</description>
    <label>Chk Converted Acc</label>
    <type>Checkbox</type>
</CustomField>