knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Contact_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please use this field to enter the Boss/Manager of this individual. Created for Assistants.</inlineHelpText>
    <label>Contact Relationship</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>