knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Disposition_Date__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Date__c</fullName>
    <label>Disposition Date</label>
    <type>Date</type>
</CustomField>