knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Disposition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Notes__c</fullName>
    <label>Disposition Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>