knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/ED_Volume__c.field-meta.xml
<CustomField>
    <fullName>ED_Volume__c</fullName>
    <label>ED Volume</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>