knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/EM_Scribe_Coverage_24hr_Period__c.field-meta.xml
<CustomField>
    <fullName>EM_Scribe_Coverage_24hr_Period__c</fullName>
    <label>EM Scribe Coverage/24hr Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>