knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/HM_NP_PAs_On_Call_Night__c.field-meta.xml
<CustomField>
    <fullName>HM_NP_PAs_On_Call_Night__c</fullName>
    <label>HM # NP/PAs On-Call/Night</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>