knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/HM_NP_PAs_Rounders_Day__c.field-meta.xml
<CustomField>
    <fullName>HM_NP_PAs_Rounders_Day__c</fullName>
    <label>HM # NP/PAs Rounders/Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>