knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/IsOwnerTSG__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerTSG__c</fullName>
    <description>This formula field is checked when the Lead Discovery Owner has TSG Profile</description>
    <formula>Owner:User.Profile.Name == &apos;TSG Sales&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOwnerTSG</label>
    <type>Checkbox</type>
</CustomField>