knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Lead_Days_Old__c.field-meta.xml
<CustomField>
    <fullName>Lead_Days_Old__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Days Old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>