knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Lead_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Lead_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Relationship</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads (Lead Relationship)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>