knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/MQL_Conversion__c.field-meta.xml
<CustomField>
    <fullName>MQL_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if converted to MQL</description>
    <label>MQL Conversion</label>
    <type>Checkbox</type>
</CustomField>