knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/MQL_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Conversion_Date__c</fullName>
    <label>MQL Conversion Date</label>
    <type>Date</type>
</CustomField>