knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Number_of_Beds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Beds__c</fullName>
    <label>Number of Beds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>