knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Nurture_Needed__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nurture Needed</label>
    <type>Checkbox</type>
</CustomField>