knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Other_Lead_Source_Contact__c.field-meta.xml
<CustomField>
    <fullName>Other_Lead_Source_Contact__c</fullName>
    <label>Pardot Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>