knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Reason_for_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Status_Change__c</fullName>
    <label>Reason for Status Change</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>