knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Rejected_lead_conversion__c.field-meta.xml
<CustomField>
    <fullName>Rejected_lead_conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a control checkbox fields that checks if the request of lead conversions was rejected. 
Do not delete.</description>
    <label>Rejected lead conversion</label>
    <type>Checkbox</type>
</CustomField>