knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Rejected_Reopen_Lead__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reopen_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a control checkbox fields that checks if the request of Re-open a lead was rejected. 
Do not delete.</description>
    <label>Rejected Reopen a Lead</label>
    <type>Checkbox</type>
</CustomField>