knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Reopen_Lead__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a control checkbox fields that triggers Re-Open Lead Approval Process
Do not delete.</description>
    <label>Reopen Lead</label>
    <type>Checkbox</type>
</CustomField>