knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Sales_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Accepted_Date__c</fullName>
    <label>Sales Accepted Date</label>
    <type>Date</type>
</CustomField>