knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Staffing__c.field-meta.xml
<CustomField>
    <fullName>Staffing__c</fullName>
    <label>Staffing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>