knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Strategic_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic Opportunity</label>
    <type>Checkbox</type>
</CustomField>