knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Subsidium_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Subsidium_Satisfaction__c</fullName>
    <label>Subsidium Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0. Unknown</fullName>
                <default>true</default>
                <label>0. Unknown</label>
            </value>
            <value>
                <fullName>1. very dissatisfied</fullName>
            </value>
            <value>
                <fullName>2. somewhat dissatisfied</fullName>
            </value>
            <value>
                <fullName>3. neutral</fullName>
            </value>
            <value>
                <fullName>4. somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>5. very satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>