knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Targeting_SL_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Targeting_SL_Total_Score__c</fullName>
    <formula>Account__r.Targeting_Total_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Targeting Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>