knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Text_Who_at_SG_was_contacted_directly__c.field-meta.xml
<CustomField>
    <fullName>Text_Who_at_SG_was_contacted_directly__c</fullName>
    <label>Who at SG was contacted directly?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>