knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/TM__c.field-meta.xml
<CustomField>
    <fullName>TM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Competitors</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (TM)</relationshipLabel>
    <relationshipName>Leads5</relationshipName>
    <type>Lookup</type>
</CustomField>