knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/TM_MDs_Nocturnists__c.field-meta.xml
<CustomField>
    <fullName>TM_MDs_Nocturnists__c</fullName>
    <label>TM MDs Nocturnists</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>