knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/Who_at_SG_was_contacted_directly__c.field-meta.xml
<CustomField>
    <fullName>Who_at_SG_was_contacted_directly__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only looks up Salesforce Users</inlineHelpText>
    <label>Who at SG was contacted directly?</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>TSG Internal</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>