knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/fields/X1st_Interaction__c.field-meta.xml
<CustomField>
    <fullName>X1st_Interaction__c</fullName>
    <description>Date and time of first 2 way engagement with lead</description>
    <inlineHelpText>Date and time of first 2 way engagement with lead</inlineHelpText>
    <label>Initial Interaction</label>
    <type>DateTime</type>
</CustomField>