knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/recordTypes/Sales_Lead.recordType-meta.xml
<RecordType>
    <fullName>Sales_Lead</fullName>
    <active>true</active>
    <businessProcess>Sales Lead Process</businessProcess>
    <description>A sales lead with any potential customer buying SG Services. This can include a Hospital Facility, System, Sub-system, etc.</description>
    <label>Sales Lead</label>
</RecordType>