knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/validationRules/MQL_Andrew.validationRule-meta.xml
<ValidationRule>
    <fullName>MQL_Andrew</fullName>
    <active>true</active>
    <description>If lead status equals marketing qualified lead it automatically is owned by Andrew Beazley</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;	Marketing Qualified Lead&quot;),
    	OwnerId &lt;&gt; &quot;005Hu00000QpzVvIAJ&quot;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Only Andrew Beazley can own a Marketing Qualified Lead</errorMessage>
</ValidationRule>