knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/validationRules/VR_Converted_to_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Converted_to_Opportunity</fullName>
    <active>false</active>
    <description>No one can choose Converted to Opportunity value if the Lead Discovery is not being converted.</description>
    <errorConditionFormula>!IsConverted &amp;&amp;  ISPICKVAL(Status, &apos;Converted to Opportunity&apos;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You are not allowed to select this status</errorMessage>
</ValidationRule>