knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/validationRules/VR_Services_Lead_Discovery.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Services_Lead_Discovery</fullName>
    <active>false</active>
    <description>This validation throws an error if the user is trying to convert or upadate a Lead Discovery record without any Service(s) [Interested / Targeted SG Services Section] selected</description>
    <errorConditionFormula>(
 !ISNEW() &amp;&amp; 
 ISBLANK(Service_s__c) &amp;&amp; 
  RecordType.Name = &apos;Sales Lead&apos;
)</errorConditionFormula>
    <errorDisplayField>Service_s__c</errorDisplayField>
    <errorMessage>You must select at least one option in Service(s).</errorMessage>
</ValidationRule>