knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/validationRules/VR_TSG_Convert_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_TSG_Convert_Lead</fullName>
    <active>true</active>
    <description>TSG Profile just can convert Lead Discovery Records when they are the owners of that records.</description>
    <errorConditionFormula>(!IsOwnerTSG__c &amp;&amp;  $Profile.Name = &apos;TSG Sales&apos; &amp;&amp; IsConverted = TRUE) 
||  
($User.Id !=  OwnerId &amp;&amp; $Profile.Name = &apos;TSG Sales&apos; &amp;&amp; IsConverted = TRUE)</errorConditionFormula>
    <errorMessage>You can only convert a Lead Discovery record if you are the owner of that record, otherwise you must Request Progression to Opportunity</errorMessage>
</ValidationRule>