knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/validationRules/VR_TSG_SALES_REQUEST.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_TSG_SALES_REQUEST</fullName>
    <active>true</active>
    <description>This validation rule is fired if the Lead Discovery owner has TSG SALES as Profile and tries to Request Progression to Opportunity.</description>
    <errorConditionFormula>IsOwnerTSG__c &amp;&amp;  ISCHANGED(Status) &amp;&amp;  ISPICKVAL(Status, &apos;Request Progression to Opportunity&apos;)</errorConditionFormula>
    <errorMessage>You are authorized to convert your lead.  Proceed by pressing the Convert button.</errorMessage>
</ValidationRule>