knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Lead/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account_LD__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>pi__grade__c</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ENGAGEMENT_SCORE</columns>
    <columns>pi__campaign__c</columns>
    <columns>pi__url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>